--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,14 +1,12 @@
-@import "reset.scss";
-@import "variables/global.scss";
-@import "themes/normal.scss";
-@import "themes/dark.scss";
+@import "reset";
+@import "variables/global";
+@import "themes/normal";
+@import "themes/dark";
 
 .app {
     font: var(--font-m);
-
     background: var(--bg-color);
     color: var(--primary-color);
-
     min-height: 100vh;
 }
 
@@ -16,7 +14,7 @@
     display: flex;
 }
 
-.page-wrapper  {
+.page-wrapper {
     flex-grow: 1;
     padding: 20px;
 }
